# P3-TegoSzukasz

./: CMakeLists.txt  CMakeProject12.cpp  OpenCv.cpp  main.cpp
